Sun Oct 14 17:05:14 2001  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* examples/C++NPv1/Logging_Handler.{h,cpp}: Changed log_file_ from
	  a reference to a pointer so that it can be initialized
 	  correctly.  Thanks to Kitty for reporting this.

Fri Oct 12 14:54:58 2001  Craig Rodrigues  <crodrigu@bbn.com>

        * ace/OS.i:
          Remove extraneous check for macro ACE_HAS_WINSOCK2_GQOS,
          which was breaking various builds under Windows.
          Thanks to Jeff McNiel <JMcNiel@datacrit.com> for pointing it out.

Fri Oct 12 12:15:22 2001  Carlos O'Ryan  <coryan@uci.edu>

        * bin/nightlybuilds/builds.lst:
          The QNX machine is no longer running that OS, plus attempts to
          bring it back to life failed.  The build is removed until
          further notice.

Thu Oct 11 17:52:32 2001  Priyanka Gontla  <pgontla@ece.uci.edu>

        * ace/SOCK_Dgram_Mcast.cpp:
          Somehow the file didnt get committed yesterday. So, committing
          the following change now.

          Wed Oct 10 16:56:18 2001  Priyanka Gontla  <pgontla@ece.uci.edu>

Thu Oct 11 10:57:58 2001  Carlos O'Ryan  <coryan@uci.edu>

        * ace/RB_Tree.h:
        * ace/RB_Tree.i:
        * ace/RB_Tree.cpp:
          Reverted to the 5.2 release state. The proposed changes were
          breaking some builds, and they were not bug fixes in any case.

Wed Oct 10 16:56:18 2001  Priyanka Gontla  <pgontla@ece.uci.edu>

        * ace/SOCK_Dgram_Mcast.cpp:
          Reverted the following change as it ended up with some problems
          for multicast services.

          Fri Oct  5 14:40:03 2001  Balachandran Natarajan  <bala@cs.wustl.edu>


Wed Oct 10 06:16:52 2001  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

        * ace/Activation_Queue.{h,cpp}: Added support for two ACE_Allocator that
          will control how the message blocks and data blocks are
          allocated.  Thanks to Gil Rapaport <grapaport@comgates.co.il>