@@ -1,3 +1,12 @@
+Mon Oct 15 11:26:39 2001  Steve Huston  <shuston@riverace.com>
+
+        * examples/C++NPv2: New directory for examples in "C++ Network
+          Programming, Volume 2: Systematic Reuse with ACE and Frameworks"
+          Moved these changes to the new directory, and reverted the
+          C++NPv1 files to their ACE 5.2 state:
+             Sun Oct 14 17:05:14 2001  Douglas C. Schmidt
+             Tue Oct  9 07:46:20 2001  Douglas C. Schmidt
+
 Sun Oct 14 17:05:14 2001  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>
 
 	* examples/C++NPv1/Logging_Handler.{h,cpp}: Changed log_file_ from
