@@ -15,19 +15,21 @@ class ACE_Message_Block;
 class Logging_Handler
 {
 protected:
-  ACE_FILE_IO &log_file_; // Reference to a log file.
+  ACE_FILE_IO *log_file_; // Pointer to a log file.
 
   ACE_SOCK_Stream logging_peer_; // Connected to the client.
 
 public:
   // Initialization and termination methods.
-  Logging_Handler (ACE_FILE_IO &log_file): log_file_ (log_file) {}
+  Logging_Handler (ACE_FILE_IO &log_file): log_file_ (&log_file) {}
   Logging_Handler (ACE_FILE_IO &log_file,
-                   ACE_HANDLE handle): log_file_ (log_file)
+                   ACE_HANDLE handle): log_file_ (&log_file)
   { logging_peer_.set_handle (handle); }
   Logging_Handler (ACE_FILE_IO &log_file,
                    const ACE_SOCK_Stream &logging_peer)
-    : log_file_ (log_file), logging_peer_ (logging_peer) {}
+    : log_file_ (&log_file), logging_peer_ (logging_peer) {}
+  Logging_Handler (const ACE_SOCK_Stream &logging_peer)
+    : log_file_ (0), logging_peer_ (logging_peer) {}
   int close () { return logging_peer_.close (); }
 
   // Receive one log record from a connected client.   Returns
